--- a/css/scss/modules/_button.scss
+++ b/css/scss/modules/_button.scss
@@ -1,8 +1,9 @@
 .btn {
   border: none;
-  height: 40px;
+  // height: 40px;
   color: #fff;
-  padding: 0 40px;
+  padding: 20px 40px;
+  margin: 10px;
   // text-shadow: 0 0 1px #aaa;
   cursor: pointer;
   transition: .5s;
