--- a/css/scss/modules/_main-header.scss
+++ b/css/scss/modules/_main-header.scss
@@ -1,8 +1,8 @@
-.menu {
-display:inline-block;
-  color: red;
+.main-header{
+  text-align: center;
+}
+.menu li{
+  display:inline-block;
+  padding: 20px 30px;
 }
 
-h1 {
-  color: red;
-}
