--- a/css/style.css
+++ b/css/style.css
@@ -2813,6 +2813,13 @@ body {
   .btn:hover {
     background: rgba(61, 164, 205, 0.9); }
 
+.main-header {
+  text-align: center; }
+
+.menu li {
+  display: inline-block;
+  padding: 20px 30px; }
+
 .blog__left {
   float: left; }
 .blog__right {
