--- a/css/style.css
+++ b/css/style.css
@@ -61,31 +61,26 @@ table {
 
 body {
   background: #f7f7f7;
-  font: 16px sans-serif; }
+  font: 16px sans-serif;
+  color: #888; }
 
 a {
   text-decoration: none;
-  font-weight: bold; }
+  color: inherit; }
+
+h1, h2, h3 {
+  font-weight: bold;
+  margin: .85rem 0; }
 
 h1 {
-  font-size: 25px;
-  font-weight: bold;
-  padding: 20px;
-  text-align: center; }
+  font-size: 2rem; }
 
 h2 {
-  font-size: 20px;
-  font-weight: bold;
-  padding: 20px;
-  text-align: center; }
+  font-size: 1.5rem; }
 
 h3 {
   font-weight: bold;
   padding: 20px 20px 10px; }
-
-p {
-  color: grey;
-  padding: 20px; }
 
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
