--- a/css/scss/base/_base.scss
+++ b/css/scss/base/_base.scss
@@ -16,8 +16,9 @@ h1 {
 }
 h2 {
   font-size: 1.5rem;
+  margin: .8rem 0;
 }
 h3 {
   font-weight: bold;
-  padding: 20px 20px 10px;
+  margin: .75rem 0;
 }
