--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,12 @@ h1 {
   font-size: 2rem; }
 
 h2 {
-  font-size: 1.5rem; }
+  font-size: 1.5rem;
+  margin: .8rem 0; }
 
 h3 {
   font-weight: bold;
-  padding: 20px 20px 10px; }
+  margin: .75rem 0; }
 
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
