--- a/css/scss/modules/_button.scss
+++ b/css/scss/modules/_button.scss
@@ -1,9 +1,9 @@
 .btn {
   text-decoration: none;
   border: none;
-  // height: 40px;
+  height: 40px;
   color: #fff;
-  padding: 20px 40px;
+  padding: 0 40px;
   margin: 10px;
   // text-shadow: 0 0 1px #aaa;
   cursor: pointer;
