--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -1,10 +1,18 @@
 .portfolio {
     background: #f7f7f7;
     &__item {
-        border-bottom: 1px solid #000;
         padding: 30px 20px;
-        & > * {
-        padding: 20px 10px;
+        &__content {
+            border-bottom: 1px solid #000;
+            & > * {
+                margin: 20px 10px;
+            }
+            .btn {
+                display: inline-block;
+                padding: 10px 40px;
+                font-weight: bold;
+            }
         }
     }
 }
+
