--- a/css/style.css
+++ b/css/style.css
@@ -2830,9 +2830,14 @@ h1 {
 .portfolio {
   background: #f7f7f7; }
   .portfolio__item {
-    border-bottom: 1px solid #000;
     padding: 30px 20px; }
-    .portfolio__item > * {
-      padding: 20px 10px; }
+    .portfolio__item__content {
+      border-bottom: 1px solid #000; }
+      .portfolio__item__content > * {
+        margin: 20px 10px; }
+      .portfolio__item__content .btn {
+        display: inline-block;
+        padding: 10px 40px;
+        font-weight: bold; }
 
 /*# sourceMappingURL=style.css.map */
