--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -7,11 +7,11 @@
             & > * {
                 margin: 20px 10px;
             }
-            .btn {
-                display: inline-block;
-                padding: 10px 40px;
-                font-weight: bold;
-            }
+//            .btn {
+//                display: inline-block;
+//                padding: 30px 40px;
+//                font-weight: bold;
+//            }
         }
     }
 }
