--- a/css/scss/modules/_main-footer.scss
+++ b/css/scss/modules/_main-footer.scss
@@ -1,28 +1,39 @@
 .main-footer {
   background: #252122;
+  padding: 45px;
   
   &__caption {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     color: #fff;
     font-weight: 600;
+    margin: 2.5rem 0;
   }
 }
-
+.date {
+  border-bottom: 1px solid #444;
+  padding: 25px 0;
+}
+.date:last-child {
+  border: none;
+}
 .number {
   background: #D52349;
   display: inline-block;
-  padding: 15px;
+  padding: 10px 10px 10px 15px;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
   color: #fff;
+  text-align: center;
   
   &__month {
     display: block;
     font-weight: 100;
+    font-size: 1.1rem;
   }
   &__day {
     display: block;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+    font-weight: 500;
   }
 }
 
@@ -34,22 +45,22 @@
   display: block;
   width: 0;
   height: 0;
-  border-top: 35px solid transparent;
+  border-top: 37px solid transparent;
   border-left: 25px solid #D52349;
-  border-bottom: 35px solid transparent;
+  border-bottom: 37px solid transparent;
   position: absolute;
-  top: -4px;
-  right: -20px;
+  top: -1px;
+  right: -24px;
   float: right;
 }
-
 .info {
   
   &__caption {
     color: #fff;
+    margin-top: .5rem;
   }
   &__message {
-    color: #aaa; 
+    
   }
-  
+
 }
