--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -1,17 +1,26 @@
 .portfolio {
+    border-top: 1px solid #ccc;
     background: #f7f7f7;
+    padding: 50px;
+    &__caption {
+        color: #252122;
+        &--main {
+            color: #252122;
+            text-align: center;
+        }
+    }
+    &__text {
+        color: #5e5e5e;
+        line-height: 1.65;
+    }
     &__item {
         padding: 30px 20px;
+        background: white;
         &__content {
-            border-bottom: 1px solid #000;
+            border-bottom: 1px solid #ccc;
             & > * {
                 margin: 20px 10px;
             }
-//            .btn {
-//                display: inline-block;
-//                padding: 30px 40px;
-//                font-weight: bold;
-//            }
         }
     }
 }
