--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -2,6 +2,9 @@
     border-top: 1px solid #ccc;
     background: #f7f7f7;
     padding: 50px;
+    &__image {
+        min-width: 100%;
+    }
     &__caption {
         color: #252122;
         &--main {
@@ -24,4 +27,3 @@
         }
     }
 }
-
