--- a/css/scss/modules/_button.scss
+++ b/css/scss/modules/_button.scss
@@ -1,14 +1,10 @@
 .btn {
-  display: inline-block;
-  text-decoration: none;
   border: none;
-  color: #fff;
-  padding: 20px 40px;
-  margin: 10px;
+  padding: 0 40px;
+  height: 60px;
   cursor: pointer;
+  border-radius: 5px;
   transition: .5s;
-  font-size: 1rem;
-  border-radius:5px;
   
   &:hover {
     opacity: .9;
