--- a/css/scss/modules/_blog.scss
+++ b/css/scss/modules/_blog.scss
@@ -1,12 +1,49 @@
 .blog {
+  padding:60px 0;
 
-  &__left--item {
+  &__left {
+    padding-right: 30px;
+
+    &__item--info {
+      h3 {
+        font-size:25px;
+        padding:30px 40px 10px; 
+        color: #000;
+      }
+      u {
+        padding:0 40px;
+        text-decoration: none;
+        font-style: italic;
+      }
+      p {
+        font-size:20px;
+        padding: 50px 40px 30px;
+        line-height: 1.5;
+      }
+    }
+  }
+
+  &__right {
+    padding-left: 30px;
+
+    &__item--info {
+      @extend .blog__left__item--info;
+    }
+  }
+  h2 {
+    text-align: center;
+    color: #000;
+    font-size: 30px;
+  }
+  &__left__item {
     background: #fff;
   }
 
-  &__right--item {
-    @extend .blog__left--item;
+  &__right__item {
+    @extend .blog__left__item;
   }
+
+  
 }
 
 .blog button i {
@@ -15,10 +52,15 @@
 }
 
 .blog button {
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 60px;
 }
 
-.blog p {
-  padding: 20px 20px 30px;
+ 
+.btn__red {
+  margin-left: 40px;
+}
+img {
+  width: 100%;
 }
