--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -15,6 +15,7 @@
     &__text {
         color: #5e5e5e;
         line-height: 1.65;
+        letter-spacing: -1;
     }
     &__item {
         padding: 30px 20px;
