--- a/css/style.css
+++ b/css/style.css
@@ -2913,7 +2913,8 @@ h2 {
       text-align: center; }
   .portfolio__text {
     color: #5e5e5e;
-    line-height: 1.65; }
+    line-height: 1.65;
+    letter-spacing: -1; }
   .portfolio__item {
     padding: 30px 20px;
     background: white; }
