--- a/css/scss/modules/_main-header.scss
+++ b/css/scss/modules/_main-header.scss
@@ -1,56 +1,75 @@
 .main-header{
   text-align: center;
-  margin:40px 0;
+  margin: 40px 0;
 }
 
-.menu li{
-  display:inline-block;
-  padding: 30px 14px;
+.active {
+  background: #d52349;
+  color:white;
+ }
+
+
+.main-nav {
+  
+  text-align: center;
+  
+  ul {
+    display: inline-block;
+  }
+  
+  &__nav-item {
+    display: block;
+    float: left;
+    padding: 30px 14px;
+    
+    a {
+      font-weight: 100;
+      font-style: italic;
+      font-size: 14px;
+      padding: 10px 15px;
+      color: #5d5d5d;
+      border-radius: 5px;
+      
+    &:hover{
+      background: #d52349;
+      color: white;
+     }
+      
+    }
+    
+  }
 }
+  
 
-.menu a{
-font-weight:100;
-font-style: italic;
-font-size: 14px;
-padding:10px 15px;
-background: #d52349;
-color: white;
-border-radius: 5px;
-}
-
-
-
-
-
-h1{
-  color:black;
-  font-weight:bolder;
+.caption1 {
+  color: black;
+  font-weight: bolder;
  }
 .banner {
   text-align: center;
-  background:url('./img/pic01.jpg');
+  background: url('./img/pic01.jpg');
 }
 .banner-item{
   display: inline-block;
   margin: 120px;
-  padding:50px 80px;
-  background:black;
+  padding: 50px 85px;
+  background: black;
   line-height: 5px;
   border-radius: 7px;
 }
-  h2{
-    color:white;
-    margin-bottom: 10px;
-    font-size: 35px;
-  }
+.caption2 {
+  color:white;
+  margin-bottom: 10px;
+  font-size: 35px;
+}
 
-.banner p{
+.banner-text {
   text-align: center;
   color:#d52349;
- margin-top: 50px;
-  font-size:20px;
-  }
+  margin-top: 50px;
+  font-size:22px;
+  font-weight: normal;
+}
   
-
 
 
