--- a/css/style.css
+++ b/css/style.css
@@ -2846,20 +2846,30 @@ h3 {
   text-align: center;
   margin: 40px 0; }
 
-.menu li {
-  display: inline-block;
-  padding: 30px 14px; }
-
-.menu a {
-  font-weight: 100;
-  font-style: italic;
-  font-size: 14px;
-  padding: 10px 15px;
+.active {
   background: #d52349;
-  color: white;
-  border-radius: 5px; }
+  color: white; }
 
-h1 {
+.main-nav {
+  text-align: center; }
+  .main-nav ul {
+    display: inline-block; }
+  .main-nav__nav-item {
+    display: block;
+    float: left;
+    padding: 30px 14px; }
+    .main-nav__nav-item a {
+      font-weight: 100;
+      font-style: italic;
+      font-size: 14px;
+      padding: 10px 15px;
+      color: #5d5d5d;
+      border-radius: 5px; }
+      .main-nav__nav-item a:hover {
+        background: #d52349;
+        color: white; }
+
+.caption1 {
   color: black;
   font-weight: bolder; }
 
@@ -2870,21 +2880,22 @@ h1 {
 .banner-item {
   display: inline-block;
   margin: 120px;
-  padding: 50px 80px;
+  padding: 50px 85px;
   background: black;
   line-height: 5px;
   border-radius: 7px; }
 
-h2 {
+.caption2 {
   color: white;
   margin-bottom: 10px;
   font-size: 35px; }
 
-.banner p {
+.banner-text {
   text-align: center;
   color: #d52349;
   margin-top: 50px;
-  font-size: 20px; }
+  font-size: 22px;
+  font-weight: normal; }
 
 .blog__left--item, .blog__right--item {
   background: #fff; }
