--- a/css/scss/modules/_button.scss
+++ b/css/scss/modules/_button.scss
@@ -5,7 +5,8 @@
   cursor: pointer;
   border-radius: 5px;
   transition: .5s;
-  
+  color: white;
+  font-weight: 800;
   &:hover {
     opacity: .9;
   }
