--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -2,15 +2,25 @@
     border-top: 1px solid #ccc;
     background: #f7f7f7;
     padding: 50px;
-    &__image {
-        min-width: 100%;
+    &__border {
+        margin-top: 4em;
+        border-top: 1px solid #ccc;
     }
     &__caption {
         color: #252122;
         &--main {
+            margin: auto;
+            background-color: white;
+            width: 250px;
             color: #252122;
             text-align: center;
+            position: relative;
+            top: -.7em;
+            font-size: 26px;
         }
+    }
+    &__image {
+        min-width: 100%;
     }
     &__text {
         color: #5e5e5e;
@@ -19,9 +29,10 @@
     }
     &__item {
         padding: 30px 20px;
-        background: white;
         &__content {
+            background: white;
             border-bottom: 1px solid #ccc;
+            padding: 20px 0;
             & > * {
                 margin: 20px 10px;
             }
