--- a/css/style.css
+++ b/css/style.css
@@ -2827,7 +2827,9 @@ h3 {
   height: 60px;
   cursor: pointer;
   border-radius: 5px;
-  transition: .5s; }
+  transition: .5s;
+  color: white;
+  font-weight: 800; }
   .btn:hover {
     opacity: .9; }
   .btn__red {
@@ -2900,22 +2902,32 @@ h2 {
   border-top: 1px solid #ccc;
   background: #f7f7f7;
   padding: 50px; }
-  .portfolio__image {
-    min-width: 100%; }
+  .portfolio__border {
+    margin-top: 4em;
+    border-top: 1px solid #ccc; }
   .portfolio__caption {
     color: #252122; }
     .portfolio__caption--main {
+      margin: auto;
+      background-color: white;
+      width: 250px;
       color: #252122;
-      text-align: center; }
+      text-align: center;
+      position: relative;
+      top: -.7em;
+      font-size: 26px; }
+  .portfolio__image {
+    min-width: 100%; }
   .portfolio__text {
     color: #5e5e5e;
     line-height: 1.65;
     letter-spacing: -1; }
   .portfolio__item {
-    padding: 30px 20px;
-    background: white; }
+    padding: 30px 20px; }
     .portfolio__item__content {
-      border-bottom: 1px solid #ccc; }
+      background: white;
+      border-bottom: 1px solid #ccc;
+      padding: 20px 0; }
       .portfolio__item__content > * {
         margin: 20px 10px; }
 
