--- a/css/scss/modules/_button.scss
+++ b/css/scss/modules/_button.scss
@@ -1,10 +1,13 @@
 .btn {
   border: none;
-  padding: 0 40px;
-  height: 60px;
+  padding: 0 30px;
+  height: 55px;
   cursor: pointer;
   border-radius: 5px;
   transition: .5s;
+  font-weight: 600;
+  color: #fff;
+  font-size: 1.1rem;
   
   &:hover {
     opacity: .9;
