--- a/css/scss/modules/_components.scss
+++ b/css/scss/modules/_components.scss
@@ -1,3 +1,13 @@
 .container {
-  width: 1400px;
+  width: 1200px;
+}
+.underline {
+  text-decoration: underline; 
+}
+.color {
+  
+  &--white {
+    color: white;
+  }
+  
 }
