Update main-footer (first section complite)

--- a/css/style.css
+++ b/css/style.css
@@ -2823,11 +2823,14 @@ h3 {
 
 .btn {
   border: none;
-  padding: 0 40px;
-  height: 60px;
+  padding: 0 30px;
+  height: 55px;
   cursor: pointer;
   border-radius: 5px;
-  transition: .5s; }
+  transition: .5s;
+  font-weight: 600;
+  color: #fff;
+  font-size: 1.1rem; }
   .btn:hover {
     opacity: .9; }
   .btn__red {
@@ -2836,7 +2839,13 @@ h3 {
     background: #353132; }
 
 .container {
-  width: 1400px; }
+  width: 1200px; }
+
+.underline {
+  text-decoration: underline; }
+
+.color--white {
+  color: white; }
 
 .main-header {
   text-align: center;
@@ -2984,5 +2993,9 @@ h3 {
   margin-top: .5rem; }
 .info__message {
   color: #666; }
+
+.thumbnail__text {
+  line-height: 1.7;
+  margin: 2rem 0; }
 
 /*# sourceMappingURL=style.css.map */
