--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -1,7 +1,7 @@
 .portfolio {
     border-top: 1px solid #ccc;
     background: #f7f7f7;
-    padding: 50px;
+//    padding: 50px;
     &__border {
         margin-top: 4em;
         border-top: 1px solid #ccc;
