ребята я добавил шрифты ,попробуйте тока упороть суки!

--- a/css/scss/modules/_main-header.scss
+++ b/css/scss/modules/_main-header.scss
@@ -23,6 +23,7 @@
     padding: 30px 14px;
     
     a {
+      font-family:'	Source Sans Pro',sans-serif;
       font-weight: 100;
       font-style: italic;
       font-size: 14px;
@@ -44,6 +45,7 @@
 .caption1 {
   color: black;
   font-weight: bolder;
+  font-family:'	Source Sans Pro',sans-serif
  }
 .banner {
   text-align: center;
@@ -58,6 +60,7 @@
   border-radius: 7px;
 }
 .caption2 {
+  font-family:'	Source Sans Pro',sans-serif;
   color:white;
   margin-bottom: 10px;
   font-size: 35px;
@@ -67,6 +70,7 @@
   text-align: center;
   color:#d52349;
   margin-top: 50px;
+  font-family:'	Source Sans Pro',sans-serif;
   font-size:22px;
   font-weight: normal;
 }
