--- a/css/scss/modules/fonts/_typography.scss
+++ b/css/scss/modules/fonts/_typography.scss
@@ -1,1 +1,2 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,400italic,600italic,700italic&subset=cyrillic-ext,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900,700italic,600italic,700,600,400italic,300italic,300,200italic,200&subset=latin,latin-ext);
