--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -1,7 +1,6 @@
 .portfolio {
     border-top: 1px solid #ccc;
     background: #f7f7f7;
-//    padding: 50px;
     &__border {
         margin-top: 4em;
         border-top: 1px solid #ccc;
@@ -23,6 +22,7 @@
         min-width: 100%;
     }
     &__text {
+        font-weight: 300;
         color: #5e5e5e;
         line-height: 1.65;
         letter-spacing: -1;
