--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ table {
 
 body {
   background: #f7f7f7;
-  font: 16px sans-serif;
+  font: 16px/1.5 'Source Sans Pro', sans-serif;
   color: #aaa; }
 
 a {
@@ -2886,34 +2886,28 @@ h3 {
   background: #d52349;
   color: white; }
 
-.main-nav {
-  text-align: center; }
-  .main-nav ul {
-    display: inline-block; }
-  .main-nav__nav-item {
-    display: block;
-    float: left;
-    padding: 30px 14px; }
-    .main-nav__nav-item a {
-      font-family: '	Source Sans Pro',sans-serif;
-      font-weight: 100;
-      font-style: italic;
-      font-size: 14px;
-      padding: 10px 15px;
-      color: #5d5d5d;
-      border-radius: 5px; }
-      .main-nav__nav-item a:hover {
-        background: #d52349;
-        color: white; }
+.main-nav ul {
+  display: inline-block; }
+.main-nav__nav-item {
+  display: block;
+  float: left;
+  padding: 30px 14px; }
+  .main-nav__nav-item a {
+    font-weight: 200;
+    padding: 10px 15px;
+    color: #5d5d5d;
+    border-radius: 5px; }
+    .main-nav__nav-item a:hover {
+      background: #d52349;
+      color: white; }
 
 .caption1 {
   color: black;
-  font-weight: bolder;
-  font-family: "	Source Sans Pro", sans-serif; }
+  font-weight: 900; }
 
 .banner {
   text-align: center;
-  background: url("./img/pic01.jpg"); }
+  background: url("../../img/pic01.jpg"); }
 
 .banner-item {
   display: inline-block;
@@ -2921,21 +2915,18 @@ h3 {
   padding: 50px 85px;
   background: black;
   line-height: 5px;
-  border-radius: 7px; }
+  border-radius: 6px; }
 
 .caption2 {
-  font-family: '	Source Sans Pro',sans-serif;
   color: white;
   margin-bottom: 10px;
-  font-size: 35px; }
+  font-size: 2.5rem; }
 
 .banner-text {
-  text-align: center;
   color: #d52349;
   margin-top: 50px;
-  font-family: '	Source Sans Pro',sans-serif;
-  font-size: 22px;
-  font-weight: normal; }
+  font-size: 1.9rem;
+  font-weight: 300; }
 
 .blog {
   padding: 60px 0; }
