--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -9,20 +9,21 @@
         color: #252122;
         &--main {
             margin: auto;
-            background-color: white;
-            width: 250px;
+            background-color: #f7f7f7;
+            width: 200px;
             color: #252122;
             text-align: center;
             position: relative;
             top: -.7em;
-            font-size: 26px;
+//            font-size: 22px;
+            letter-spacing: -.5;
         }
     }
     &__image {
         min-width: 100%;
     }
     &__text {
-        font-weight: 300;
+//        font-weight: 200;
         color: #5e5e5e;
         line-height: 1.65;
         letter-spacing: -1;
