--- a/css/scss/modules/_main-header.scss
+++ b/css/scss/modules/_main-header.scss
@@ -1,6 +1,7 @@
 .main-header{
   text-align: center;
-  margin: 40px 0;
+  margin: 68px 0;
+  line-height: 18px;
 }
 .active {
   background: #d52349;
@@ -15,10 +16,12 @@
   &__nav-item {
     display: block;
     float: left;
-    padding: 30px 14px;
+    padding: 30px 13px;
     
     a {
-      font-weight: 200;
+      font-weight: 300 ;
+      font-style: italic;
+      font-size: 1.1rem;
       padding: 10px 15px;
       color: #5d5d5d;
       border-radius: 5px;
@@ -33,6 +36,9 @@
 .caption1 {
   color: black;
   font-weight: 900;
+  font-size: 2.7rem;
+  letter-spacing: -1.5px;
+
 }
 .banner {
   text-align: center;
@@ -54,6 +60,6 @@
 .banner-text {
   color: #d52349;
   margin-top: 50px;
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   font-weight: 300 ;
 }
