portfolio закончил мелкие изменения стилей

--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -14,7 +14,7 @@
             color: #252122;
             text-align: center;
             position: relative;
-            top: -.7em;
+            top: -.9em;
             letter-spacing: -.5;
         }
     }
@@ -30,7 +30,7 @@
             border-bottom: 1px solid #ccc;
             padding: 20px 0;
             & > * {
-                margin: 20px 10px;
+                margin: 20px;
             }
         }
     }
