--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -22,6 +22,7 @@
         font-weight:300;
         color: #5e5e5e;
         line-height: 1.65;
+        font-size: 18px;
     }
     &__item {
         padding: 30px 20px;
