--- a/css/scss/modules/_main-footer.scss
+++ b/css/scss/modules/_main-footer.scss
@@ -100,3 +100,13 @@
     }
   }
 }
+
+.contacts{
+    &__social > a {
+        padding: 0 10px;
+        transition: color .4s ease-in-out;
+        &:hover {
+            color: #d52349;
+        }
+    }
+}
