--- a/css/scss/modules/_portfolio.scss
+++ b/css/scss/modules/_portfolio.scss
@@ -18,6 +18,9 @@
             letter-spacing: -.5;
         }
     }
+    &__image {
+      width: 100%;
+    }
     &__text {
         font-weight:300;
         color: #5e5e5e;
